<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mentor</string>
    <string name="IP">88.92.88.22</string>
    <string name="action_settings">Settings</string>
    <string name="introduction_text">Real-time feedback system for education</string>
    <string name="title_activity_teacher_view">TeacherViewActivity</string>
    <string name="title_activity_mentor_pref">Settings</string>
    <string name="tv_text1">Please fill the following form before you can start using the system</string>
    <string name="start">Start</string>
    <string name="nodata">No data</string>
    <string name="course_name">Course name</string>
    <string name="course_subject">Course subject</string>
    <string name="course_name_hint">Mandatory. 2 to 30 characters</string>
    <string name="teacher_name">Teacher name</string>
    <string name="teacher_name_hint">Optional. 2 to 30 characters</string>
    <string name="all_hint">2 to 30 characters</string>
    <string name="exitBtn">Exit</string>
    <string name="lecture_number">Lecture number</string>
    <string name="lecture_number_hint">Optional. Value 1 to 999</string>
    <string name="lecture_topic_hint">Mandatory. 2 to 50 characters</string>
    <string name="course_subject_hint">Optional. 2 to 50 characters</string>
    <string name="lecture">Lecture</string>
    <string name="exercise">Exercise</string>
    <string name="alert_threshold">Show feedback when atleast</string>
    <string name="alert_threshold2">of the students have given feedback, within</string>
    <string name="timespan">timespan</string>
    <string name="one_student">One</string>
    <string name="ten_percent">10%</string>
    <string name="twentyfive_percent">25%</string>
    <string name="fifty_percent">50%</string>
    <string name="one_min">1</string>
    <string name="five_min">5 min</string>
    <string name="ten_min">10 min</string>
    <string name="thirty_min">30 min</string>
    <string name="save_to_default">Default</string>
    <string name="default_all">Default</string>
    <string name="title_activity_teacher_vision">TeacherVisionActivity</string>
    <string name="first">FEEDBACKS</string>
    <string name="second">QUESTIONS</string>
    <string name="last">ANSWERS</string>
    <string name="title_activity_student_view">StudentViewActivity</string>
    <string name="marker_number">Marker number</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="student_name">Student name</string>
    <string name="student_name_hint">Optional. 2 to 30 characters</string>
    <string name="online_courses">ONLINE COURSES</string>
    <string name="title_activity_student_vision">StudentVisionActivity</string>
    <string name="more_examples">More examples, please</string>
    <string name="speed_up">Speed up, please</string>
    <string name="slow_down">Slow down, please</string>
    <string name="slowDownColor">Slow down color</string>
    <string name="speedUpColor">Speed up color</string>
    <string name="moreExamplesColor">More examples color</string>
    <string name="repeatColor">Repeat color</string>
    <string name="questionColor">Question color</string>
    <string name="answerColor">Answer color</string>
    <string name="green">1</string>
    <string name="yellow">2</string>
    <string name="blue">4</string>
    <string name="magenta">5</string>
    <string name="red">3</string>
    <string name="cyan">6</string>
    <string name="repeat">Repeat, please</string>
    <string name="send">Send</string>
    <string name="feedback_type">Choose feedback type</string>
    <string name="anonymous">Anonymous</string>
    <string name="question">Ask a custom question</string>
    <string name="answer">Answer question</string>
    <string name="popUpTitle">Send a custom message </string>
    <string name="puAnswer">Answer</string>
    <string name="lecture_topic">Lecture topic</string>
    <string name="puQuestion">Question</string>
    <string name="puFeedback">Feedback</string>
    <string name="cancel">Cancel</string>
    <string name="privateSession">Private session</string>
    <string name="credentials_title">Enter username and password to modify private course</string>
    <string name="password">Password:</string>
    <string name="password_hint">Input 5 to 15 characters</string>
    <string name="username">Username:</string>
    <string name="username_hint">Input 5 to 15 characters</string>
    <string name="login">Send</string>
    <string name="newUser">New user</string>
    <string name="existingUser">Existing user</string>
    <string name="teacherBtn">Teacher</string>
    <string name="studentBtn">Student</string>
    <string name="webBasedBtn">Web-based</string>
    <string name="helpBtn">Help</string>
    <string name="mentorLogoDescription">Mentor logo</string>
    <string name="customText">Add custom text here</string>
    <string name="customTextHint">Mandatory. Input 2 to 30 characters</string>
    <string name="beepTitle">Notification sounds</string>
    <string name="feedbackAll">Feedback to all students registered</string>
    <string name="questionAll">Question to all students registered</string>
    <string name="answerAll">Answer to all students registered</string>
    <string name="flaretime">Flare time</string>
    <string name="five_sec">5</string>
    <string name="notificationTitle">Notification messages</string>
</resources>
