<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory>
        <EditTextPreference
            android:title="@string/course_name"
            android:key="courseNamePref"
            android:defaultValue="">
        </EditTextPreference>
        <EditTextPreference
            android:title="@string/lecture_topic"
            android:key="lectureTopicPref"
            android:defaultValue="">
        </EditTextPreference>
        <ListPreference
            android:title="@string/alert_threshold"
            android:key="alertThresholdPref"
            android:defaultValue="@string/one"
            android:entries="@array/alertThresholdKeys"
            android:entryValues="@array/alertThresholdValues">            
        </ListPreference>
        <ListPreference
            android:title="@string/timespan"
            android:key="timespanPref"
            android:defaultValue="@string/one"
            android:entries="@array/timespanKeys"
            android:entryValues="@array/timespanValues">            
        </ListPreference>
        <ListPreference
            android:title="@string/flaretime"
            android:key="flaretimePref"
            android:defaultValue="@string/five_sec"
            android:entries="@array/flaretimeKeys"
            android:entryValues="@array/flaretimeValues">            
        </ListPreference>
       <ListPreference
            android:title="@string/speedUpColor"
            android:key="speedUpPref"
            android:defaultValue="@string/green"
            android:entries="@array/colorKeys"
            android:entryValues="@array/colorValues">            
        </ListPreference>
        <ListPreference
            android:title="@string/moreExamplesColor"
            android:key="moreExamplesPref"
            android:defaultValue="@string/yellow"
            android:entries="@array/colorKeys"
            android:entryValues="@array/colorValues">            
        </ListPreference>
        <ListPreference
            android:title="@string/slowDownColor"
            android:key="slowDownPref"
            android:defaultValue="@string/red"
            android:entries="@array/colorKeys"
            android:entryValues="@array/colorValues">            
        </ListPreference>
        <ListPreference
            android:title="@string/repeatColor"
            android:key="repeatPref"
            android:defaultValue="@string/cyan"
            android:entries="@array/colorKeys"
            android:entryValues="@array/colorValues">             
        </ListPreference>
        <ListPreference
            android:title="@string/questionColor"
            android:key="questionPref"
            android:defaultValue="@string/blue"
            android:entries="@array/colorKeys"
            android:entryValues="@array/colorValues">              
        </ListPreference>
        <ListPreference
            android:title="@string/answerColor"
            android:key="answerPref"
            android:defaultValue="@string/magenta"
            android:entries="@array/colorKeys"
            android:entryValues="@array/colorValues">              
        </ListPreference>
        <CheckBoxPreference 
            android:key="beep"
            android:title="@string/beepTitle"
            android:defaultValue="true"/>
        <CheckBoxPreference 
            android:key="notification"
            android:title="@string/notificationTitle"
            android:defaultValue="true"/>
    </PreferenceCategory>   
</PreferenceScreen>
