<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF000000" >
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#FFF"
	    android:textSize="12dip"
	    android:text="@string/username">
    </TextView>
    <EditText
        android:id="@+id/unameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textColor="#FFF"
        android:inputType="textShortMessage|textFilter"
        android:maxLength="30"
        android:maxLines="1">
    </EditText>    
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#FFF"
	    android:textSize="12dip"
	    android:text="@string/password">
    </TextView>
    <EditText
        android:id="@+id/pwdEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textColor="#FFF"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1">
    </EditText>
	<RadioGroup
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <RadioButton android:id="@+id/newUser"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/newUser"
	        android:textColor="#FFF"
	        android:onClick="onUserTypeClicked"/>
	    <RadioButton android:id="@+id/existingUser"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/existingUser"
	        android:textColor="#FFF"
	        android:onClick="onUserTypeClicked"/>
	</RadioGroup>
    <Button 
        android:id="@+id/credentialsBtn"
        android:text="@string/send"
        android:background="#FF232323"
        android:textColor="@android:color/white"
        android:onClick="sendCredentialsClicked" 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content">
    </Button>
</LinearLayout>
