<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF000000" >
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#FFF"
	    android:textSize="12dip"
	    android:text="@string/customText">
	</TextView>
    <EditText
        android:id="@+id/svCustomTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/customTextHint"
        android:textColor="#FFF"
        android:inputType="textShortMessage|textFilter"
        android:maxLength="30"
        android:maxLines="1">
    </EditText>
    <Button 
        android:id="@+id/svSendPersonalBtn"
        android:text="@string/send"
        android:onClick="svSendPersonalClicked"
        android:background="#FF232323"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content">
    </Button>
</LinearLayout>
