<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sv_linLayout_dummy1"
        android:layout_weight="0.05">
    </LinearLayout>
	<LinearLayout
        android:layout_width="0dip"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:id="@+id/sv_linLayout1"
	    android:layout_weight="0.9"
        android:background="#CC000000">
 	    <TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textColor="#FFF"
		    android:textSize="12sp"
		    android:text="@string/tv_text1"
		    android:gravity="center">
	    </TextView>
	    <View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/sv_linLayout2">
		    <TextView
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:textColor="#FFF"
			    android:layout_weight="0.2"
			    android:textSize="12sp"
			    android:text="@string/marker_number">
		    </TextView>
			<RadioGroup
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:checkedButton="@+id/marker_one">
			    <RadioButton android:id="@+id/marker_one"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/one"
			        android:textColor="#FFF"
			        android:textSize="12sp"
			        android:onClick="onRadioButtonClicked"/>
			    <RadioButton android:id="@+id/marker_two"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/two"
			        android:textColor="#FFF"
			        android:textSize="12sp"
			        android:onClick="onRadioButtonClicked"/>
			    <RadioButton android:id="@+id/marker_three"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/three"
			        android:textColor="#FFF"
			        android:textSize="12sp"
			        android:onClick="onRadioButtonClicked"/>
			</RadioGroup>
		</LinearLayout>
		<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/sv_linLayout3">
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="#FFF"
			    android:layout_weight="0.2"
			    android:textSize="12sp"
			    android:text="@string/student_name">
		    </TextView>
		    <EditText
		        android:id="@+id/student_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/student_name_hint"
		        android:textColor="#FFF"
		        android:layout_weight="0.5"
		        android:inputType="textShortMessage|textFilter"
		        android:maxLength="30"
		        android:maxLines="1">
		    </EditText>
		</LinearLayout>
		<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#FFF"
		    android:textSize="12sp"
		    android:text="@string/online_courses">
	    </TextView>
		<ExpandableListView android:id="@+id/sv_exp_list_view"
		    android:layout_width="match_parent"
		    android:layout_height="125sp"
		    android:background="#FF232323"
		    android:choiceMode="singleChoice"
		    android:childDivider="#FFFFFFFF">
		</ExpandableListView>
		<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/sv_linLayout4">
			<Button
			    android:id="@+id/sv_button1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="center_horizontal"
			    android:text="@string/start"
			    android:textColor="#ffffff"
			    android:onClick="loadStudentVision"> 
			</Button>
		    <CheckBox
		        android:id="@+id/private_sv_checkbox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/privateSession"
		        android:textColor="#FFF"
		        android:onClick="privateSvClicked">
		    </CheckBox>
		</LinearLayout>
		<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/pb2LinLayout">
		    <ProgressBar 
		        android:id="@+id/svProgressBar"
		        style="?android:attr/progressBarStyleLarge"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
		    </ProgressBar>
		</LinearLayout>   
    </LinearLayout>
	<LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sv_linLayout_dummy2"
        android:layout_weight="0.05">
	</LinearLayout>
</LinearLayout>
