<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:baselineAligned="false"
    tools:context="uni.oulu.mentor.MainViewActivity$PlaceholderFragment" >
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linLayout_dummy1"
        android:layout_weight="0.2">
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dip"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:id="@+id/linLayout1"
	    android:layout_weight="0.6"
        android:background="#CC000000"
        android:layout_gravity="center">
        <ImageView
	        android:id="@+id/ImgView2"
	        android:contentDescription="@string/mentorLogoDescription"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:src="@drawable/mlogo2"
	        android:scaleType="centerInside">
        </ImageView>
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textColor="#FFF"
		    android:textSize="@dimen/textFieldTextSize"
		    android:gravity="center"
		    android:text="@string/introduction_text">	    
		</TextView>
	    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:id="@+id/linLayout2">
				<Button
				    android:id="@+id/button1"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="0.33"
				    android:text="@string/teacherBtn"
				    android:textSize="@dimen/buttonTextSize"
				    android:textColor="#ffffff"
				    android:onClick="loadTeacherView"> 
				</Button>
				<Button
				    android:id="@+id/button2"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="0.33"
				    android:text="@string/studentBtn"
				    android:textSize="@dimen/buttonTextSize"
				    android:textColor="#ffffff"
				    android:onClick="loadStudentView"> 
				</Button>
				<Button
				    android:id="@+id/button3"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="0.33"
				    android:text="@string/exitBtn"
				    android:textSize="@dimen/buttonTextSize"
				    android:textColor="#ffffff"
				    android:onClick="loadExit"> 
				</Button>
			</LinearLayout>
	</LinearLayout>
	<LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linLayout_dummy2"
        android:layout_weight="0.2">
	</LinearLayout>
</LinearLayout>
