<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="uni.oulu.mentor.TeacherViewActivity$PlaceholderFragment" >
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linLayout_dummy3"
        android:layout_weight="0.05">
    </LinearLayout>
	<LinearLayout
        android:layout_width="0dip"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:id="@+id/linLayout3"
	    android:layout_weight="0.9"
        android:background="#CC000000">
	    <TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textColor="#FFF"
		    android:textSize="12sp"
		    android:text="@string/tv_text1"
		    android:gravity="center">
	    </TextView>
	    <View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/linLayout4">
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="#FFF"
			    android:layout_weight="0.2"
			    android:textSize="12sp"
			    android:text="@string/course_name">
		    </TextView>
		    <EditText
		        android:id="@+id/course_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#FFF"
		        android:layout_weight="0.5"
		        android:textSize="12sp"
		        android:inputType="textShortMessage|textFilter"
		        android:maxLength="30"
		        android:maxLines="1"
		        android:minLines="1">
		    </EditText>
		    <CheckBox
		        android:id="@+id/default_course"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/save_to_default"
		        android:textSize="12sp"
		        android:textColor="#FFF"
		        android:onClick="defaultClicked">
		    </CheckBox>
		</LinearLayout>
		<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/linLayout5">
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="#FFF"
			    android:layout_weight="0.2"
			    android:textSize="12sp"
			    android:text="@string/teacher_name">
		    </TextView>
		    <EditText
		        android:id="@+id/teacher_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#FFF"
		        android:textSize="12sp"
		        android:layout_weight="0.5"
		        android:inputType="textShortMessage|textFilter"
		        android:maxLength="30"
		        android:maxLines="1">
		    </EditText>
		</LinearLayout>
		<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/linLayoutX">
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="#FFF"
			    android:layout_weight="0.2"
			    android:textSize="12sp"
			    android:text="@string/course_subject">
		    </TextView>
		    <EditText
		        android:id="@+id/course_subject"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#FFF"
		        android:textSize="12sp"
		        android:layout_weight="0.5"
		        android:inputType="textShortMessage|textFilter"
		        android:maxLength="30"
		        android:maxLines="1">
		    </EditText>
		</LinearLayout>
		<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/linLayout6">
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="#FFF"
			    android:textSize="12sp"
			    android:text="@string/lecture_number">
			</TextView>
		    <EditText
		        android:id="@+id/lecture_number"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#FFF"
		        android:textSize="12sp"
		        android:inputType="number"
		        android:maxLength="5"
		        android:maxLines="1">
		    </EditText>
			<RadioGroup
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
			    <RadioButton android:id="@+id/lecture"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/lecture"
			        android:textColor="#FFF"
			        android:textSize="12sp"
			        android:onClick="onLectureRbClicked"/>
			    <RadioButton android:id="@+id/exercise"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/exercise"
			        android:textColor="#FFF"
			        android:textSize="12sp"
			        android:onClick="onLectureRbClicked"/>
			</RadioGroup>
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="#FFF"
			    android:textSize="12sp"
			    android:text="@string/lecture_topic">
			</TextView>
		    <EditText
		        android:id="@+id/lecture_topic"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:textColor="#FFF"
		        android:textSize="12sp"
		        android:inputType="textShortMessage|textFilter"
		        android:layout_weight="0.4"
		        android:maxLength="30"
		        android:maxLines="1">
		    </EditText>
		    <CheckBox
		        android:id="@+id/default_lecture"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="12sp"
		        android:text="@string/save_to_default"
		        android:textColor="#FFF"
		        android:onClick="defaultClicked">
		    </CheckBox>
		</LinearLayout>
		<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/linLayout8">
			<Button
			    android:id="@+id/button5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="center_horizontal"
			    android:text="@string/start"
			    android:textColor="#ffffff"
			    android:onClick="loadTeacherVision"> 
			</Button>
		    <CheckBox
		        android:id="@+id/private_checkbox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/privateSession"
		        android:textSize="12sp"
		        android:textColor="#FFF"
		        android:onClick="privateClicked">
		    </CheckBox>
		</LinearLayout>
		<View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:background="@android:color/darker_gray">
	    </View>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:id="@+id/pbLinLayout">
		    <ProgressBar 
		        android:id="@+id/tvProgressBar"
		        style="?android:attr/progressBarStyleLarge"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
		    </ProgressBar>
		</LinearLayout>
    </LinearLayout>
	<LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linLayout_dummy4"
        android:layout_weight="0.05">
	</LinearLayout>
</LinearLayout>
