<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#FF000000">
		 <LinearLayout
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal">
		     <Button android:id="@+id/sv_goto_first"
		         android:layout_width="wrap_content" 
		         android:layout_height="wrap_content"
		         android:text="@string/first"
		         android:textSize="@dimen/buttonTextSize"
		         android:layout_weight="0.33">
		     </Button>
		     <Button android:id="@+id/sv_goto_second"
		         android:layout_width="wrap_content" 
		         android:layout_height="wrap_content"
		         android:text="@string/second"
		         android:textSize="@dimen/buttonTextSize"
		         android:layout_weight="0.33">
		     </Button>
		     <Button android:id="@+id/sv_goto_last"
		         android:layout_width="wrap_content" 
		         android:layout_height="wrap_content"
		         android:text="@string/last"
		         android:textSize="@dimen/buttonTextSize"
		         android:layout_weight="0.33">
		     </Button>
	     </LinearLayout>
	    <android.support.v4.view.ViewPager
	        android:id="@+id/sv_pager"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	    </android.support.v4.view.ViewPager>
	</LinearLayout> 
</RelativeLayout>

